--- a/assets/i18n/active.fr.json
+++ b/assets/i18n/active.fr.json
@@ -21,7 +21,7 @@
   },
   "command.help.text.options": {
     "hash": "sha1-9576f41168dfc7418562fad8a5e82f309014c344",
-    "other": "Vous pouvez personnaliser les options en tapant `/{{.Trigger}} \\\"Question\\\" \\\"Réponse 1\\\" \\\"Réponse 2\\\" \\\"Réponse 3\\\"`"
+    "other": "Vous pouvez personnaliser les options en tapant `/{{.Trigger}} \"Question\" \"Réponse 1\" \"Réponse 2\" \"Réponse 3\"`"
   },
   "command.help.text.pollSetting.anonymous": {
     "hash": "sha1-fb98b7ba3c20091f6ea79a47ee43122d14e3f50a",
@@ -29,7 +29,7 @@
   },
   "command.help.text.pollSetting.introduction": {
     "hash": "sha1-2484e1a47494f152cf4e3d96bd173da1a779ac30",
-    "other": "Les paramètres du sondage permettent une personnalisation plus poussée, e.g. `/{{.Trigger}} \\\"Question\\\" \\\"Réponse 1\\\" \\\"Réponse 2\\\" \\\"Réponse 3\\\" --progress --anonymous`. Les éléments de configuration disponibles sont :"
+    "other": "Les paramètres du sondage permettent une personnalisation plus poussée, e.g. `/{{.Trigger}} \"Question\" \"Réponse 1\" \"Réponse 2\" \"Réponse 3\" --progress --anonymous`. Les éléments de configuration disponibles sont :"
   },
   "command.help.text.pollSetting.progress": {
     "hash": "sha1-9b8deba20f6a2fc6221841de9db19c903d28f97f",
@@ -41,7 +41,7 @@
   },
   "command.help.text.simple": {
     "hash": "sha1-3e9e692901434c94972562861477a71bf6dda12e",
-    "other": "Pour créer un sondage avec les réponses \\\"{{.Yes}}\\\" et \\\"{{.No}}\\\" tapez `/{{.Trigger}} \\\"Question\\\"`."
+    "other": "Pour créer un sondage avec les réponses \"{{.Yes}}\" et \"{{.No}}\" tapez `/{{.Trigger}} \"Question\"`."
   },
   "dialog.addOption.element.displayName": {
     "hash": "sha1-e31d972229de381b461860014dd710856361917a",
@@ -85,7 +85,7 @@
     "other": "**Paramètres du sondage**: {{.Settings}}"
   },
   "poll.message.totalVotes": {
-    "hash": "sha1-ea094ab4bcf8b514e19bd2ba1daa56f23016c777",
+    "hash": "sha1-9a86d661838edccd7408678f9c1bb65de3d889c0",
     "other": "**Total des votes**: {{.TotalVotes}}"
   },
   "response.addOption.invalidPermission": {
