Fix invalid dot

--- a/assets/i18n/active.fr.json
+++ b/assets/i18n/active.fr.json
@@ -20,7 +20,7 @@
     "other": "Vous devez fournir soit zéro, soit plus de deux réponses."
   },
   "command.help.text.options": {
-    "hash": "sha1-9576f41168dfc7418562fad8a5e82f309014c344",
+    "hash": "sha1-0b06ca6a7a2a1e2481ed761fe93eefec7d67079e",
     "other": "Vous pouvez personnaliser les options en tapant `/{{.Trigger}} \"Question\" \"Réponse 1\" \"Réponse 2\" \"Réponse 3\"`"
   },
   "command.help.text.pollSetting.anonymous": {
@@ -28,8 +28,8 @@
     "other": "Ne pas montrer qui a voté quoi"
   },
   "command.help.text.pollSetting.introduction": {
-    "hash": "sha1-2484e1a47494f152cf4e3d96bd173da1a779ac30",
-    "other": "Les paramètres du sondage permettent une personnalisation plus poussée, e.g. `/{{.Trigger}} \"Question\" \"Réponse 1\" \"Réponse 2\" \"Réponse 3\" --progress --anonymous`. Les éléments de configuration disponibles sont :"
+    "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
+    "other": "Les paramètres du sondage permettent une personnalisation plus poussée, e.g. `/{{.Trigger}} \"Question\" \"Réponse 1\" \"Réponse 2\" \"Réponse 3\" --progress --anonymous`. Les éléments de configuration disponibles sont:"
   },
   "command.help.text.pollSetting.progress": {
     "hash": "sha1-9b8deba20f6a2fc6221841de9db19c903d28f97f",
@@ -40,8 +40,8 @@
     "other": "Autoriser tous les utilisateurs à ajouter des options supplémentaires"
   },
   "command.help.text.simple": {
-    "hash": "sha1-3e9e692901434c94972562861477a71bf6dda12e",
-    "other": "Pour créer un sondage avec les réponses \"{{.Yes}}\" et \"{{.No}}\" tapez `/{{.Trigger}} \"Question\"`."
+    "hash": "sha1-783c9e50cbbd9a11685f41524265201b2e97d369",
+    "other": "Pour créer un sondage avec les réponses \"{{.Yes}}\" et \"{{.No}}\" tapez `/{{.Trigger}} \"Question\"`"
   },
   "dialog.addOption.element.displayName": {
     "hash": "sha1-e31d972229de381b461860014dd710856361917a",
