--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -1,5 +1,7 @@
 {
   "bot.description": "Poll Bot",
+  "command.autoComplete.desc": "Create a poll",
+  "command.autoComplete.hint": "\"[Question]\" \"[Answer 1]\" \"[Answer 2]\"...",
   "command.default.no": "No",
   "command.default.yes": "Yes",
   "command.error.generic": "Something went wrong. Please try again later.",
