--- a/assets/i18n/active.pl.json
+++ b/assets/i18n/active.pl.json
@@ -5,14 +5,14 @@
     "command.default.no": "Nie",
     "command.default.yes": "Tak",
     "command.error.generic": "Coś poszło nie tak. Spróbuj później.",
-    "command.error.invalidInput": "Invalid input: {{.Error}}",
+    "command.error.invalidInput": "Nieprawidłowy wpis: {{.Error}}",
     "command.error.invalidNumberOfOptions": "Musisz podać co najmniej dwie odpowiedzi albo żadnej.",
     "command.help.text.options": "Możesz dostowować opcje wpisując `/{{.Trigger}} \"Pytanie\" \"Odpowiedź 1\" \"Odpowiedź 2\" \"Odpowiedź 3\"`",
     "command.help.text.pollSetting.anonymous": "Nie pokazuj kto na co głosował",
     "command.help.text.pollSetting.introduction": "Dodatkowe ustawienia ankiety, np.: `/{{.Trigger}} \"Pytanie\" \"Odpowiedź 1\" \"Odpowiedź 2\" \"Odpowiedź 3\" --progress --anonymous`. Dostępne ustawienia sondy:",
-    "command.help.text.pollSetting.progress": "During the poll, show how many votes each answer option got",
-    "command.help.text.pollSetting.public-add-option": "Allow all users to add additional options",
-    "command.help.text.simple": "To create a poll with the answer options \"{{.Yes}}\" and \"{{.No}}\" type `/{{.Trigger}} \"Pytanie\"`",
+    "command.help.text.pollSetting.progress": "Podczas sondy, pokaż ile głosów uzyskała każda odpowiedź.",
+    "command.help.text.pollSetting.public-add-option": "Zezwalaj użytkownikom na dodanie własnych odpowiedzi.",
+    "command.help.text.simple": "Żeby utworzyć sondę z odpowiedziami \"{{.Yes}}\" i \"{{.No}}\" typ `/{{.Trigger}} \"Pytanie\"`",
     "dialog.addOption.element.displayName": "Opcje",
     "dialog.addOption.submitLabel": "Dodaj",
     "dialog.addOption.title": "Dodaj opcję",
@@ -32,7 +32,7 @@
     "response.deletePoll.invalidPermission": "Tylko twórca sondy i administratorzy mogą usunąć sondę.",
     "response.deletePoll.success": "Pomyślnie usunięto sondę.",
     "response.endPoll.invalidPermission": "Tylko twórca sondy i administratorzy mogą zakończyć sondę.",
-    "response.endPoll.successfully": "Sonda **{{.Question}}** has ended and the original post have been updated. You can jump to it by pressing [here]({{.Link}}).",
+    "response.endPoll.successfully": "Sonda **{{.Question}}** została zakończona i oryginalny post został zaktualizowany. Możesz przejść do tej wiadomości klikając [tutaj]({{.Link}}).",
     "response.vote.counted": "Twój głos został policzony.",
     "response.vote.updated": "Twój głos został zmieniony."
 }
