--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -16,6 +16,8 @@
   "dialog.addOption.element.displayName": "Option",
   "dialog.addOption.submitLabel": "Add",
   "dialog.addOption.title": "Add Option",
+  "poll.addAnswerOption.duplicate": "Duplicate option: {{.Option}}",
+  "poll.addAnswerOption.empty": "Empty option not allowed",
   "poll.button.addOption": "Add Option",
   "poll.button.deletePoll": "Delete Poll",
   "poll.button.endPoll": "End Poll",
@@ -27,6 +29,7 @@
   "poll.endPost.text": "This poll has ended. The results are:",
   "poll.message.pollSettings": "**Poll Settings**: {{.Settings}}",
   "poll.message.totalVotes": "**Total votes**: {{.TotalVotes}}",
+  "poll.newPoll.unrecognizedSetting": "Unrecognized poll setting: {{.Setting}}",
   "response.addOption.invalidPermission": "Only the creator of a poll and System Admins are allowed to add options.",
   "response.addOption.success": "Successfully added the option.",
   "response.deletePoll.invalidPermission": "Only the creator of a poll and System Admins are allowed to delete it.",
