--- a/assets/i18n/active.pl.json
+++ b/assets/i18n/active.pl.json
@@ -82,9 +82,9 @@
     "poll.endPost.answer.heading": {
         "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
         "one": "{{.Answer}} ({{.Count}} głos)",
-        "few": "{{.Answer}} ({{.Count}} głosów)",
+        "few": "{{.Answer}} ({{.Count}} głosy)",
         "many": "{{.Answer}} ({{.Count}} głosów)",
-        "other": "{{.Answer}} ({{.Count}} głosów)"
+        "other": "{{.Answer}} ({{.Count}} głosu)"
     },
     "poll.endPost.seperator": {
         "hash": "sha1-cffa50a32cb13a240d705317bcec65dd1f31b6ad",
