Allow creating of poll via interactive dialog (#220)

--- a/assets/i18n/active.en.json
+++ b/assets/i18n/active.en.json
@@ -8,7 +8,7 @@
   "command.error.invalidInput": "Invalid input: {{.Error}}",
   "command.error.invalidNumberOfOptions": "You must provide either no answer or at least two answers.",
   "command.help.text.options": "You can customize the options by typing `/{{.Trigger}} \"Question\" \"Answer 1\" \"Answer 2\" \"Answer 3\"`",
-  "command.help.text.pollSetting.anonymous": "Don't show who voted for what",
+  "command.help.text.pollSetting.anonymous": "Don't show who voted for what when the poll ends",
   "command.help.text.pollSetting.introduction": "Poll Settings provider further customization, e.g. `/{{.Trigger}} \"Question\" \"Answer 1\" \"Answer 2\" \"Answer 3\" --progress --anonymous`. The available Poll Settings are:",
   "command.help.text.pollSetting.progress": "During the poll, show how many votes each answer option got",
   "command.help.text.pollSetting.public-add-option": "Allow all users to add additional options",
@@ -16,6 +16,10 @@
   "dialog.addOption.element.displayName": "Option",
   "dialog.addOption.submitLabel": "Add",
   "dialog.addOption.title": "Add Option",
+  "dialog.create.submitLabel": "Create",
+  "dialog.create.title": "Create Poll",
+  "dialog.createPoll.option": "Option {{ .Number }}",
+  "dialog.createPoll.question": "Question",
   "dialog.delete.submitLabel": "Delete",
   "dialog.delete.title": "Confirm Poll Delete",
   "dialog.end.submitLabel": "End",
