--- a/assets/i18n/active.zh-CN.json
+++ b/assets/i18n/active.zh-CN.json
@@ -43,6 +43,10 @@
     "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
     "other": "您可以按：`/{{.Trigger}} \"问题\" \"回答1\" \"回答2\" \"回答3\" --progress --anonymous` 的方式进行输入，对投票本身进行自定义。"
   },
+  "command.help.text.pollSetting.multi-vote": {
+    "hash": "sha1-aadf6806b8899a61f1e79282e0f981f30b369634",
+    "other": "允许用户进行多选投票。"
+  },
   "command.help.text.pollSetting.progress": {
     "hash": "sha1-9b8deba20f6a2fc6221841de9db19c903d28f97f",
     "other": "在投票期间，显示每个回答选项所获得的票数。"
@@ -83,6 +87,10 @@
     "hash": "sha1-002ff598115d84595ffeee6219cb5c03d3a1d4a6",
     "other": "问题"
   },
+  "dialog.createPoll.setting.multi": {
+    "hash": "sha1-2620d65ec5d950990264c88b2ce52717948d269b",
+    "other": "用户最多可以进行的投票次数。"
+  },
   "dialog.delete.submitLabel": {
     "hash": "sha1-f6fdbe48dc54dd86f63097a03bd24094dedd713a",
     "other": "删除"
@@ -119,6 +127,10 @@
     "hash": "sha1-60ddde386bd7190fa3da2ba13f97e3caa625d3e6",
     "other": "投票中止"
   },
+  "poll.button.resetVotes": {
+    "hash": "sha1-5dde85fe02a747ab6a09cd15156c01d955c8ab56",
+    "other": "重新投票"
+  },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
     "other": "{{.Answer}} (投票数 {{.Count}})"
@@ -142,6 +154,22 @@
   "poll.newPoll.unrecognizedSetting": {
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
     "other": "无效的投票设定： {{.Setting}}"
+  },
+  "poll.newPoll.votesettings.invalidSetting": {
+    "hash": "sha1-a0649f6d7040b480c543e843e12cd14de97ef6d6",
+    "other": "可进行的投票次数必须为一个小于等于投票选项数的正整数。您设定的投票次数为 \"{{.MaxVotes}}\" ，投票选项数为 \"{{.Options}}\"。"
+  },
+  "poll.newPoll.votesettings.unexpectedError": {
+    "hash": "sha1-e9d86776544f9cf7effd6db84f9e988b6fbccd29",
+    "other": "在进行处理时发生了预料外的错误 {{.Setting}}"
+  },
+  "poll.updateVote.alreadyVoted": {
+    "hash": "sha1-c73a2717c594b9f0da1b70e9c7ff0027e5aa1eb2",
+    "other": "您已经给这个选项投过票了。"
+  },
+  "poll.updateVote.maxVotes": {
+    "hash": "sha1-7804621555aa16cac819fa2a31c7521f1758de8f",
+    "other": "您无法再进行投票了，因为您已经没有剩余的投票次数可用了。使用重新投票按钮来重新进行投票。"
   },
   "response.addOption.invalidPermission": {
     "hash": "sha1-eb74073a478570ac636c47871075938350adec37",
@@ -167,9 +195,21 @@
     "hash": "sha1-a4fba46ee42d558010f595fec2e1e451cf3d4d73",
     "other": "投票 **{{.Question}}** 已结束，原始信息已经自动更新，您可以通过点击 [此处]({{.Link}}) 跳转查看。"
   },
+  "response.resetVotes.noVotes": {
+    "hash": "sha1-18b17380e0289d021b70c7111bab1dca0d563b30",
+    "other": "没有可重新进行的投票。"
+  },
+  "response.resetVotes.success": {
+    "hash": "sha1-fd557010c26787d3aeece2745511dab764cb09c7",
+    "other": "所有的投票选项已经清空。您上次的投票选项为 [{{.ClearedVotes}}]。"
+  },
   "response.vote.counted": {
     "hash": "sha1-3420b74a2fee31243e4e4e7a72a527832685f97d",
     "other": "投票已完成。"
+  },
+  "response.vote.multi.updated": {
+    "hash": "sha1-213785e569b994863b96b984772e9497f8629bbc",
+    "other": "投票选项已记入。您还可以投 {{.Remains}} 票。"
   },
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
