--- a/assets/i18n/active.zh-TW.json
+++ b/assets/i18n/active.zh-TW.json
@@ -43,6 +43,10 @@
     "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
     "other": "你可以按：`/{{.Trigger}} \"問題\" \"選項1\" \"選項2\" \"選項3\"` --progress --anonymous` 的方式進行輸入，自行定義投票的回答選項。"
   },
+  "command.help.text.pollSetting.multi-vote": {
+    "hash": "sha1-aadf6806b8899a61f1e79282e0f981f30b369634",
+    "other": "允許使用者選擇多個選項"
+  },
   "command.help.text.pollSetting.progress": {
     "hash": "sha1-9b8deba20f6a2fc6221841de9db19c903d28f97f",
     "other": "在投票期間，顯示每個選項的得票數。"
@@ -53,7 +57,7 @@
   },
   "command.help.text.simple": {
     "hash": "sha1-783c9e50cbbd9a11685f41524265201b2e97d369",
-    "other": "在建立僅需要 \"{{.Yes}}\" 与 \"{{.No}}\" 的投票過程中，你可以使用 `/{{.Trigger}} \"問題\"` 的方式來快速建立。"
+    "other": "在建立僅需要 \"{{.Yes}}\" 與 \"{{.No}}\" 的投票過程中，你可以使用 `/{{.Trigger}} \"問題\"` 的方式來快速建立。"
   },
   "dialog.addOption.element.displayName": {
     "hash": "sha1-e31d972229de381b461860014dd710856361917a",
@@ -82,6 +86,10 @@
   "dialog.createPoll.question": {
     "hash": "sha1-002ff598115d84595ffeee6219cb5c03d3a1d4a6",
     "other": "問題"
+  },
+  "dialog.createPoll.setting.multi": {
+    "hash": "sha1-2620d65ec5d950990264c88b2ce52717948d269b",
+    "other": "使用者最多可以投的票數。"
   },
   "dialog.delete.submitLabel": {
     "hash": "sha1-f6fdbe48dc54dd86f63097a03bd24094dedd713a",
@@ -113,11 +121,15 @@
   },
   "poll.button.deletePoll": {
     "hash": "sha1-390ff4fdd0cfef6ef35fbf067a605aa3ea87ecca",
-    "other": "删除投票"
+    "other": "刪除投票"
   },
   "poll.button.endPoll": {
     "hash": "sha1-60ddde386bd7190fa3da2ba13f97e3caa625d3e6",
     "other": "投票終止"
+  },
+  "poll.button.resetVotes": {
+    "hash": "sha1-5dde85fe02a747ab6a09cd15156c01d955c8ab56",
+    "other": "重新投票"
   },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
@@ -143,6 +155,22 @@
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
     "other": "無效的投票設定： {{.Setting}}"
   },
+  "poll.newPoll.votesettings.invalidSetting": {
+    "hash": "sha1-bf96d6b01204be0f86727d2253d235272e177ded",
+    "other": "可投票的次數必須是一個小於等於投票選項數的正整數。您設定的次數為\"{{.MaxVotes}}\"，投票選項數為 \"{{.Options}}\" 。"
+  },
+  "poll.newPoll.votesettings.unexpectedError": {
+    "hash": "sha1-e9d86776544f9cf7effd6db84f9e988b6fbccd29",
+    "other": "在設定 {{.Setting}} 時發生了非預期的錯誤。"
+  },
+  "poll.updateVote.alreadyVoted": {
+    "hash": "sha1-c73a2717c594b9f0da1b70e9c7ff0027e5aa1eb2",
+    "other": "您已經投過這個選項了。"
+  },
+  "poll.updateVote.maxVotes": {
+    "hash": "sha1-7804621555aa16cac819fa2a31c7521f1758de8f",
+    "other": "您無法再進行投票了。因為您已經沒有剩餘的票數可用了。可選擇重新投票重設投票"
+  },
   "response.addOption.invalidPermission": {
     "hash": "sha1-eb74073a478570ac636c47871075938350adec37",
     "other": "僅投票建立者及系統管理員可以新增投票的選項。"
@@ -157,7 +185,7 @@
   },
   "response.deletePoll.success": {
     "hash": "sha1-cb754e0331888691ff5e4179b22155fc6df1ac1d",
-    "other": "投票已删除。"
+    "other": "投票已刪除。"
   },
   "response.endPoll.invalidPermission": {
     "hash": "sha1-6fec2172c9fbcf6944812318684b19ebda485a82",
@@ -167,9 +195,21 @@
     "hash": "sha1-a4fba46ee42d558010f595fec2e1e451cf3d4d73",
     "other": "投票 **{{.Question}}** 已結束，原始訊息已自動更新，你可以透過此[連結]({{.Link}}) 查看。"
   },
+  "response.resetVotes.noVotes": {
+    "hash": "sha1-18b17380e0289d021b70c7111bab1dca0d563b30",
+    "other": "沒有可重新進行的投票。"
+  },
+  "response.resetVotes.success": {
+    "hash": "sha1-fd557010c26787d3aeece2745511dab764cb09c7",
+    "other": "所有的投票選項已清空。您上次的投票選項為 [{{.ClearedVotes}}] 。"
+  },
   "response.vote.counted": {
     "hash": "sha1-3420b74a2fee31243e4e4e7a72a527832685f97d",
     "other": "投票已完成。"
+  },
+  "response.vote.multi.updated": {
+    "hash": "sha1-213785e569b994863b96b984772e9497f8629bbc",
+    "other": "投票成功，您還可以投 {{.Remains}} 票。"
   },
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
