--- a/assets/i18n/active.es.json
+++ b/assets/i18n/active.es.json
@@ -43,6 +43,10 @@
     "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
     "other": "Configuraciones de encuesta para proveer más personalización, por ejemplo. `/{{.Trigger}} \"Pregunta\" \" Respuesta 1\" \"Respuesta 2\" \"Respuesta 3\" --progress --anonymous`. Las configuraciones de encuesta disponibles son:"
   },
+  "command.help.text.pollSetting.multi-vote": {
+    "hash": "sha1-aadf6806b8899a61f1e79282e0f981f30b369634",
+    "other": "Permitir a los usuarios votar por X opciones"
+  },
   "command.help.text.pollSetting.progress": {
     "hash": "sha1-9b8deba20f6a2fc6221841de9db19c903d28f97f",
     "other": "Durante la encuesta, mostrar cuantos votos consiguió cada respuesta"
@@ -83,6 +87,10 @@
     "hash": "sha1-002ff598115d84595ffeee6219cb5c03d3a1d4a6",
     "other": "Pregunta"
   },
+  "dialog.createPoll.setting.multi": {
+    "hash": "sha1-2620d65ec5d950990264c88b2ce52717948d269b",
+    "other": "El número de opciones que un usuario puede votar."
+  },
   "dialog.delete.submitLabel": {
     "hash": "sha1-f6fdbe48dc54dd86f63097a03bd24094dedd713a",
     "other": "Eliminar"
@@ -119,6 +127,10 @@
     "hash": "sha1-60ddde386bd7190fa3da2ba13f97e3caa625d3e6",
     "other": "Terminar encuesta"
   },
+  "poll.button.resetVotes": {
+    "hash": "sha1-5dde85fe02a747ab6a09cd15156c01d955c8ab56",
+    "other": "Resetear votos"
+  },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
     "one": "{{.Answer}} ({{.Count}} voto)",
@@ -144,6 +156,22 @@
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
     "other": "Configuración de encuesta no reconocida: {{.Setting}}"
   },
+  "poll.newPoll.votesettings.invalidSetting": {
+    "hash": "sha1-bf96d6b01204be0f86727d2253d235272e177ded",
+    "other": "El número de votos debe ser un número positivo y menor o igual al número de opciones. Ha especificado \"{{.MaxVotes}}\", pero el número de opciones es \"{{.Options}}\"."
+  },
+  "poll.newPoll.votesettings.unexpectedError": {
+    "hash": "sha1-e9d86776544f9cf7effd6db84f9e988b6fbccd29",
+    "other": "Un error inesperado ocurre cuando se analiza {{.Setting}}"
+  },
+  "poll.updateVote.alreadyVoted": {
+    "hash": "sha1-c73a2717c594b9f0da1b70e9c7ff0027e5aa1eb2",
+    "other": "Ya ha votado por esta opción."
+  },
+  "poll.updateVote.maxVotes": {
+    "hash": "sha1-7804621555aa16cac819fa2a31c7521f1758de8f",
+    "other": "No puede votar por esta opción, porque ya no le quedan votos. Use el botón de reseteo para resetear sus votos."
+  },
   "response.addOption.invalidPermission": {
     "hash": "sha1-eb74073a478570ac636c47871075938350adec37",
     "other": "Solo el creador de la encuesta y los administradores del sistema tienen permitido añadir opciones."
@@ -168,9 +196,22 @@
     "hash": "sha1-a4fba46ee42d558010f595fec2e1e451cf3d4d73",
     "other": "La encuesta **{{.Question}}** ha terminado y el post original ha sido actualizado. Puede ir a él presionando [aquí]({{.Link}})."
   },
+  "response.resetVotes.noVotes": {
+    "hash": "sha1-18b17380e0289d021b70c7111bab1dca0d563b30",
+    "other": "No hay votos para resetear."
+  },
+  "response.resetVotes.success": {
+    "hash": "sha1-fd557010c26787d3aeece2745511dab764cb09c7",
+    "other": "Se han quitado todos los votos. Sus votos previos eran [{{.ClearedVotes}}]."
+  },
   "response.vote.counted": {
     "hash": "sha1-3420b74a2fee31243e4e4e7a72a527832685f97d",
     "other": "Su voto ha sido contado."
+  },
+  "response.vote.multi.updated": {
+    "hash": "sha1-213785e569b994863b96b984772e9497f8629bbc",
+    "one": "Su voto ha sido contado. Le queda {{.Remains}} voto.",
+    "other": "Su voto ha sido contado. Le quedan {{.Remains}} votos."
   },
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
