--- a/assets/i18n/active.ko.json
+++ b/assets/i18n/active.ko.json
@@ -39,6 +39,10 @@
     "hash": "sha1-413dccc620dcf0d910c2cba09522443793fbcb33",
     "other": "누가 어떤 응답을 했는지 보여주지 않습니다"
   },
+  "command.help.text.pollSetting.multi-vote": {
+    "hash": "sha1-aadf6806b8899a61f1e79282e0f981f30b369634",
+    "other": "사용자가 X 응답에 투표하도록 허용합니다"
+  },
   "command.help.text.pollSetting.introduction": {
     "hash": "sha1-5cf3ba00c35f9b75d8b2118081c7c45b2a36ecb3",
     "other": "다음과 같이 사용자 정의 투표 설정을 할 수 있습니다. 예: `/{{.Trigger}} \"질의\" \"응답 1\" \"응답 2\" \"응답 3\" --progress --anonymous`. 가능한 투표 설정은 다음과 같습니다:"
@@ -83,6 +87,10 @@
     "hash": "sha1-002ff598115d84595ffeee6219cb5c03d3a1d4a6",
     "other": "질의"
   },
+  "dialog.createPoll.setting.multi": {
+    "hash": "sha1-2620d65ec5d950990264c88b2ce52717948d269b",
+    "other": "사용자가 투표할 수 있는 응답의 갯수입니다."
+  },
   "dialog.delete.submitLabel": {
     "hash": "sha1-f6fdbe48dc54dd86f63097a03bd24094dedd713a",
     "other": "삭제"
@@ -119,6 +127,10 @@
     "hash": "sha1-60ddde386bd7190fa3da2ba13f97e3caa625d3e6",
     "other": "투표 종료"
   },
+  "poll.button.resetVotes": {
+    "hash": "sha1-5dde85fe02a747ab6a09cd15156c01d955c8ab56",
+    "other": "투표 초기화"
+  },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
     "other": "{{.Answer}} ({{.Count}}명 참여)"
@@ -142,6 +154,22 @@
   "poll.newPoll.unrecognizedSetting": {
     "hash": "sha1-c915ad443fd65d4df5c1461ad85bc0ccc61b5654",
     "other": "알 수 없는 투표 설정: {{.Setting}}"
+  },
+  "poll.newPoll.votesettings.invalidSetting": {
+    "hash": "sha1-bf96d6b01204be0f86727d2253d235272e177ded",
+    "other": "투표 수는 응답의 갯수보다 작거나 같아야 합니다. \"{{.MaxVotes}}\"개의 최대 투표를 지정했지만 응답의 개수는 \"{{.Options}}\"개입니다."
+  },
+  "poll.newPoll.votesettings.unexpectedError": {
+    "hash": "sha1-e9d86776544f9cf7effd6db84f9e988b6fbccd29",
+    "other": "{{.Setting}} 설정을 구문 분석하는 중에 오류가 예기치 못한 오류가 발생했습니다"
+  },
+  "poll.updateVote.alreadyVoted": {
+    "hash": "sha1-c73a2717c594b9f0da1b70e9c7ff0027e5aa1eb2",
+    "other": "이 응답에 이미 투표했습니다."
+  },
+  "poll.updateVote.maxVotes": {
+    "hash": "sha1-7804621555aa16cac819fa2a31c7521f1758de8f",
+    "other": "투표권이 남아있지 않기 때문에 응답을 할 수 없습니다. 투표를 초기화하려면 투표 초기화 버튼을 사용하세요."
   },
   "response.addOption.invalidPermission": {
     "hash": "sha1-eb74073a478570ac636c47871075938350adec37",
@@ -167,9 +195,21 @@
     "hash": "sha1-a4fba46ee42d558010f595fec2e1e451cf3d4d73",
     "other": "**{{.Question}}** 투표가 종료되었으며, 원본 게시글이 갱신되었습니다. [여기]({{.Link}})를 눌러서 바로 이동할 수 있습니다."
   },
+  "response.resetVotes.noVotes": {
+    "hash": "sha1-18b17380e0289d021b70c7111bab1dca0d563b30",
+    "other": "초기화할 투표가 없습니다."
+  },
+  "response.resetVotes.success": {
+    "hash": "sha1-fd557010c26787d3aeece2745511dab764cb09c7",
+    "other": "모든 투표가 초기화됩니다. 이전 응답은 [{{.ClearedVotes}}] 였습니다."
+  },
   "response.vote.counted": {
     "hash": "sha1-3420b74a2fee31243e4e4e7a72a527832685f97d",
     "other": "투표 참여가 집계되었습니다."
+  },
+  "response.vote.multi.updated": {
+    "hash": "sha1-213785e569b994863b96b984772e9497f8629bbc",
+    "other": "투표 참여가 집계되었습니다. {{.Remains}}개의 응답이 남았습니다."
   },
   "response.vote.updated": {
     "hash": "sha1-e23eeb209a3a322e1c1174d7816d2ccbca52080b",
