Update es i18n for 1.5.0

--- a/assets/i18n/active.es.json
+++ b/assets/i18n/active.es.json
@@ -128,8 +128,9 @@
     "other": "Terminar encuesta"
   },
   "poll.button.resetVotes": {
-    "hash": "sha1-5dde85fe02a747ab6a09cd15156c01d955c8ab56",
-    "other": "Resetear votos"
+    "hash": "sha1-4a61c63020a340f21d6986159f8c2dcce0f25a79",
+    "one": "Restablecer tu voto",
+    "other": "Restablecer tus votos"
   },
   "poll.endPost.answer.heading": {
     "hash": "sha1-46743e9dbbeec0c43d16fe387735cf95c2e27abb",
